(ENHANCE) Port the 'go to line' dialog to Ttk
(ENHANCE) Port the window with the progressbar when creating a new project
(ENHANCE) Port Tk's choose color dialog to Ttk Widgets
(ENHANCE) Port the 'preferences' dialog to Ttk widgets
(BUGFIX) Fix the 'Delete' button in the start dialog in Windows
(BUGFIX) Fix the way the Tree widget talks to vertical Ttk scrollbars
(ENHANCE) Port the 'choose directory' dialog to Ttk widgets
(INTERNAL) Create a sn_ttk_buttons proc to substitute sn_motif_buttons
(INTERNAL) Change the dialog that pops up with Tcl/Tk errors to Ttk
(ENHANCE) Ported the 'delete project' question dialog to Ttk
(ENHANCE) Ported the 'new project' dialog to use Ttk widgets
(ENHANCE) Update the project management window to use Ttk widgets
(INTERNAL) Add tile extension for Ttk widgets support
(BUGFIX) Fix cancelling in Windows the choose font dialog
(ENHANCE) Use tk_chooseColor
(ENHANCE) Simplify the dialog to choose fonts and add all the available ones
(BUGFIX) Fix the auto selection when "}" or "]" are typed
(BUGFIX) Double click to the right of "{}()<>[]" selects the content
(ENHANCE) Configure will add TruType support by default
(INTERNAL) Remove code to support old Tcl/Tk versions
(INTERNAL) Remove direct access to interp->result
(BUGFIX) Fix the dialog that pops up when looking for an implementation
(ENHANCE) Use, for the time being,  Tk default fonts
(BUGFIX) Fix the Help->Online manuals menu entry
(INTERNAL) Update tkTable to version 2.10
(INTERNAL) Update xmplib.c from Tix source following former SN versions
(INTERNAL) Add losts of CONSTs and casts to prevent compile warnings
(INTERNAL) Update the initialization of itcl classes to the current syntax
(INTERNAL) Allow access to internal commands in Tcl/Tk 8.4
(INTERNAL) Update Tix to version 8.4.3
(INTERNAL) Update [incr tcl] to version 3.4.1 and [incr tk] to 3.4.0
(INTERNAL) Update Tcl/Tk to version 8.4.19

Release NG4.5 (Sun Oct 14 09:39:57 CEST 2012)
