@@ -1,3 +1,5 @@
+(ENHANCE) Port the 'Find-Replace' dialog to Ttk
+(ENHANCE) Port the 'Find dialog' to Ttk
 (ENHANCE) Port the 'go to line' dialog to Ttk
 (ENHANCE) Port the window with the progressbar when creating a new project
 (ENHANCE) Port Tk's choose color dialog to Ttk Widgets
